# agentforge-llm

./: .env.example  .gitignore  Makefile  PROCESO.md  README.md  mcp-config-snippet.json  pyproject.toml
agentforge/: __init__.py  cli.py  config.py  md_parser.py  models.py  orchestrator.py  server.py
agentforge/handlers/: __init__.py  analyze.py  documentation.py  extract.py  generate.py  generate_code.py  generic.py  metadata.py  update.py
agentforge/ollama/: __init__.py  client.py
agentforge/utils/: __init__.py  logger.py  perf_monitor.py  results.py  validator.py
docs/: benchmark_codellama_v2_tracking.json  benchmark_cycles_tracking.json  benchmark_deepseek_tracking.json  benchmark_qwen25_tracking.json  codellama13b_capability_map.md
k8s/: Dockerfile  agentforge-deployment.yaml  namespace.yaml  ollama-deployment.yaml  ollama-service.yaml
plans/: build-networking-module.json
templates/: estado_update.txt  module_claude_md.txt  module_metadata.txt  python_function.txt  terraform_outputs.txt  terraform_variables.txt  terraform_versions.txt  tf_resources.txt  tfsec_report.txt
tests/: test_from_md.md
