[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge-llm"
version = "0.1.0"
description = "AgentForge LLM — MCP Server para orquestar tareas mecanicas via Ollama"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "anyio>=4.4.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
agentforge = "agentforge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
